--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -61,45 +61,15 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
                 <section>
 
-                    <h2>Heads Up</h2>
-                    <p>
-                    reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-                    support for CSS 3D transforms to see it in its full glory.
-                    </p>
+                    <h1>Data Management</h1>
+
+                    <p class="fragment orange">Important questions</p>
+                    <p class="fragment">How <em class="orange">much</em> data is there in the world today?</p>
+                    <p class="fragment"></p>
+                    <p class="fragment"></p>
 
                 </section>
 
-                <!-- Example of nested vertical slides -->
-                <section>
-                    <section>
-                        <h2>Vertical Slides</h2>
-                        <p>
-                        Slides can be nested inside of other slides,
-                        try pressing <a href="#" class="navigate-down">down</a>.
-                        </p>
-                        <a href="#" class="image navigate-down">
-                            <img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-                        </a>
-                    </section>
-                    <section>
-                        <h2>Basement Level 1</h2>
-                        <p>Press down or up to navigate.</p>
-                    </section>
-                    <section>
-                        <h2>Basement Level 2</h2>
-                        <p>Cornify</p>
-                        <a class="test" href="http://cornify.com">
-                            <img width="280" height="326" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn">
-                        </a>
-                    </section>
-                    <section>
-                        <h2>Basement Level 3</h2>
-                        <p>That's it, time to go back up.</p>
-                        <a href="#/2" class="image">
-                            <img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
-                        </a>
-                    </section>
-                </section>
 
                 <section>
                     <h2>Pretty Code</h2>
