Starting to work up the content in the first slide.

--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -63,8 +63,8 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
                     <h1>Data Management</h1>
 
-                    <p class="fragment orange">Important questions</p>
-                    <p class="fragment">How <em class="orange">much</em> data is there in the world today?</p>
+                    <p class="fragment">Important questions</p>
+                    <p class="fragment">How <b class="orange">much</b> data is there in the world today?</p>
                     <p class="fragment"></p>
                     <p class="fragment"></p>
 
