Added in the questions that I can start off the first class with.

--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -63,10 +63,11 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
                     <h1>Data Management</h1>
 
-                    <p class="fragment">Important questions</p>
-                    <p class="fragment">How <b class="orange">much</b> data is there in the world today?</p>
-                    <p class="fragment"></p>
-                    <p class="fragment"></p>
+                    <p class="fragment">Important Questions</p>
+                    <p class="fragment">How much data ...</p>
+                    <p class="fragment">... <b class="orange">is</b> there in the world today?</p>
+                    <p class="fragment">... is being <b class="sky">produced</b> on a daily basis?</p>
+                    <p class="fragment">... can we reliably <b class="scarlet">store</b> in digital media? </p>
 
                 </section>
 
