--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -55,7 +55,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <h2>Principles of Database Systems</h2>
                     <p>Gregory M. Kapfhammer</p>
 
-                    <small><em>Background</em>: <a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">creative commons licensed ( BY-NC-SA )</a> <a title="vases" href="http://flickr.com/photos/mybloodyself/2428544365">flickr photo</a> shared by <a href="http://flickr.com/people/mybloodyself">danmachold</a></small>
+                    <br/><small><a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">creative commons licensed ( BY-NC-SA )</a> <a title="vases" href="http://flickr.com/photos/mybloodyself/2428544365">flickr photo</a> shared by <a href="http://flickr.com/people/mybloodyself">danmachold</a></small>
 
                 </section>
 
@@ -67,10 +67,40 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">How much data ...</p>
                     <p class="fragment">... <b class="orange">is</b> there in the world today?</p>
                     <p class="fragment">... is being <b class="sky">produced</b> on a daily basis?</p>
-                    <p class="fragment">... can we reliably <b class="scarlet">store</b> in digital media? </p>
+                    <p class="fragment">... can we reliably <b class="scarlet">store</b> in digital media?</p>
 
                 </section>
 
+                <section>
+
+                    <h1>Relational Databases</h1>
+
+                    <p class="fragment">Important Questions</p>
+                    <p class="fragment">What are some ...</p>
+                    <p class="fragment">... common <b class="green">relational</b> databases management systems?</p>
+                    <p class="fragment">... well-known types of <b class="orange">applications</b> that use databases?</p>
+                    <p class="fragment">... <b class="sky">good</b> reasons for using a relational database?</p>
+                    
+                </section>
+
+                <section data-background-transition="fade" data-background="https://farm4.staticflickr.com/3115/2901295347_47caf4600f_b.jpg" style="">
+                </section>
+
+                <section data-background-transition="fade" data-background="https://farm4.staticflickr.com/3115/2901295347_47caf4600f_b.jpg" style="background: rgba(29,31,33,0.9)">
+
+                <h1>Common Ground</h1>
+
+                <p>What is a ...</p>
+
+                <p class="fragment"><b class="sky">database</b> ?</p>
+
+                <p class="fragment">database <b class="orange">management</b> system (DBMS) ?</p>
+
+                <br/> <small><a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">creative commons licensed (
+                        BY-NC-SA )</a> <a title="" href="http://flickr.com/photos/42498009@N00/2901295347">flickr
+                photo</a> shared by <a href="http://flickr.com/people/42498009@N00">M.Y</a></small>
+
+                </section>
 
                 <section>
                     <h2>Pretty Code</h2>
