Removing the exclamation point from the word. Submodule approach works.

--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -51,7 +51,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
                 <section data-background-transition="fade" data-background="https://farm4.staticflickr.com/3094/2428544365_4fdd69c25d_b.jpg" style="background: rgba(29,31,33,0.9)">
 
-                    <h1>Computer Science 380!:</h1>
+                    <h1>Computer Science 380:</h1>
                     <h2>Principles of Database Systems</h2>
                     <p>Gregory M. Kapfhammer</p>
 
