Going for the none transition for all of the slides. No more fading.

--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -49,7 +49,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
             <div class="slides">
 
-                <section data-background-transition="fade" data-background="https://farm4.staticflickr.com/3094/2428544365_4fdd69c25d_b.jpg" style="background: rgba(29,31,33,0.9)">
+                <section data-background-transition="none" data-background="https://farm4.staticflickr.com/3094/2428544365_4fdd69c25d_b.jpg" style="background: rgba(29,31,33,0.9)">
 
                     <h1>Computer Science 380:</h1>
                     <h2>Principles of Database Systems</h2>
@@ -75,7 +75,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
                     <h1>Relational Databases</h1>
 
-                    <p class="fragment">Important Questions</p>
+                    <p class="fragment">Important Questions!</p>
                     <p class="fragment">What are some ...</p>
                     <p class="fragment">... common <b class="green">relational</b> databases management systems?</p>
                     <p class="fragment">... well-known types of <b class="orange">applications</b> that use databases?</p>
@@ -83,10 +83,10 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     
                 </section>
 
-                <section data-background-transition="fade" data-background="https://farm4.staticflickr.com/3115/2901295347_47caf4600f_b.jpg" style="">
+                <section data-background-transition="none" data-background="https://farm4.staticflickr.com/3115/2901295347_47caf4600f_b.jpg" style="">
                 </section>
 
-                <section data-background-transition="fade" data-background="https://farm4.staticflickr.com/3115/2901295347_47caf4600f_b.jpg" style="background: rgba(29,31,33,0.9)">
+                <section data-background-transition="none" data-background="https://farm4.staticflickr.com/3115/2901295347_47caf4600f_b.jpg" style="background: rgba(29,31,33,0.9)">
 
                 <h1>Common Ground</h1>
 
@@ -104,10 +104,10 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
                 </section>
 
-                <section data-background-transition="fade" data-background="https://farm6.staticflickr.com/5116/5888652979_2b92bab52a_b.jpg" style="">
+                <section data-background-transition="none" data-background="https://farm6.staticflickr.com/5116/5888652979_2b92bab52a_b.jpg" style="">
                 </section>
 
-                <section data-background-transition="fade" data-background="https://farm6.staticflickr.com/5116/5888652979_2b92bab52a_b.jpg" style="background: rgba(29,31,33,0.9)">
+                <section data-background-transition="none" data-background="https://farm6.staticflickr.com/5116/5888652979_2b92bab52a_b.jpg" style="background: rgba(29,31,33,0.9)">
 
                 <h2>File Processing Systems</h2>
 
@@ -177,7 +177,7 @@ function linkify( selector ) {
         center: true,
 
         theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-        transition: Reveal.getQueryHash().transition || 'none', // default/cube/page/concave/zoom/linear/fade/none
+        transition: Reveal.getQueryHash().transition || 'none', // default/cube/page/concave/zoom/linear/none/none
 
 // Parallax scrolling
 // parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
