--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -104,6 +104,16 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
                 </section>
 
+                <section>
+
+                    <h1>Data Management Trade-Offs</h1>
+
+                    <p class="fragment">Which method is <b class="scarlet">better</b>?</p>
+                    <p class="fragment">What are the <b class="orange">advantages</b> and <b class="sky">disadvantages</b>?</p>
+                    <p class="fragment">What are the evaluation <b class="green">metrics</b>?</p>
+                    
+                </section>
+
                 <section data-background-transition="none" data-background="https://farm6.staticflickr.com/5116/5888652979_2b92bab52a_b.jpg" style="">
                 </section>
 
