Added in all of the slides for the first chapter.

--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -189,10 +189,51 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                 
                     <h1 id="database_models">Database Languages</h1>
 
-                    <p class="fragment">SQL: Structured query language</p>
-                    <p class="fragment">DDL: Data definition language</p>
-                    <p class="fragment">DML: Data manipulation language</p>
-                    <p class="fragment">SQL = DDL + DML</p> 
+                    <p class="fragment"><b class="green">SQL</b>: Structured query language</p>
+                    <p class="fragment"><b class="sky">DDL</b>: Data definition language</p>
+                    <p class="fragment"><b class="plum">DML</b>: Data manipulation language</p>
+                    <p class="fragment"><b class="green">SQL</b> = <b class="sky">DDL</b> + <b class="plum">DML</b></p> 
+
+                </section>
+
+                <section>
+                
+                    <h1 id="database_applications">Database Applications</h1>
+
+                    <p class="fragment">Program and a host language</p>
+                    <p class="fragment">Relational database</p>
+                    <p class="fragment">Relational database management system</p>
+                    <p class="fragment">Database interaction point</p> 
+
+                </section>
+
+                <section>
+
+                    <h1 id="entity-relationship_models">Entity-Relationship Models</h1>
+
+                    <p class="fragment">Normalization</p>
+                    <p class="fragment">Null values</p>
+                    <p class="fragment">Object-relational mapping</p>
+
+                </section>
+
+
+<!-- <a title="Nova Eventis" href="http://flickr.com/photos/helmuthess/13575675933"><img class="img-responsive-tight" src="http://farm4.static.flickr.com/3830/13575675933_5f2206cbd8_z.jpg" /></a><br /><small><a href="http://creativecommons.org/licenses/by/2.0/">creative commons licensed ( BY )</a> <a title="Nova Eventis" href="http://flickr.com/photos/helmuthess/13575675933">flickr photo</a> shared by <a href="http://flickr.com/people/helmuthess">*Light Painting*</a></small> -->
+
+                <section data-background-transition="none" data-background="" style="http://farm4.static.flickr.com/3830/13575675933_5f2206cbd8_z.jpg">
+                </section>
+
+                <section data-background-transition="none" data-background="http://farm4.static.flickr.com/3830/13575675933_5f2206cbd8_z.jpg" style="background: rgba(29,31,33,0.9)">
+
+                    <h2>Database Architecture</h2> 
+
+                    <p class="fragment">Query processor</p>
+                    <p class="fragment">Storage manager</p>
+                    <p class="fragment">Two-tier and three-tier architecture</p>
+                    <p class="fragment">Advantages and disadvantages?</p>
+                    <p class="fragment">"Keep the computation close to the data"</p>
+
+                    <br /><small><a href="http://creativecommons.org/licenses/by/2.0/">creative commons licensed ( BY )</a> <a title="Nova Eventis" href="http://flickr.com/photos/helmuthess/13575675933">flickr photo</a> shared by <a href="http://flickr.com/people/helmuthess">`Light Painting</a></small> 
 
                 </section>
 
