Adjusted the title slide so that it includes the chapter of the material.

--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -52,7 +52,8 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                 <section data-background-transition="none" data-background="https://farm4.staticflickr.com/3094/2428544365_4fdd69c25d_b.jpg" style="background: rgba(29,31,33,0.9)">
 
                     <h1>Computer Science 380:</h1>
-                    <h2>Principles of Database Systems</h2>
+                    <h3>Principles of Database Systems</h3>
+                    <h3>Chapter 1</h3>
                     <p>Gregory M. Kapfhammer</p>
 
                     <br/><small><a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">creative commons licensed ( BY-NC-SA )</a> <a title="vases" href="http://flickr.com/photos/mybloodyself/2428544365">flickr photo</a> shared by <a href="http://flickr.com/people/mybloodyself">danmachold</a></small>
