Removed an extra mark in a captin for a background image.

--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -234,7 +234,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">Advantages and disadvantages?</p>
                     <p class="fragment">"Keep the computation close to the data"</p>
 
-                    <br /><small><a href="http://creativecommons.org/licenses/by/2.0/">creative commons licensed ( BY )</a> <a title="Nova Eventis" href="http://flickr.com/photos/helmuthess/13575675933">flickr photo</a> shared by <a href="http://flickr.com/people/helmuthess">`Light Painting</a></small> 
+                    <br /><small><a href="http://creativecommons.org/licenses/by/2.0/">creative commons licensed ( BY )</a> <a title="Nova Eventis" href="http://flickr.com/photos/helmuthess/13575675933">flickr photo</a> shared by <a href="http://flickr.com/people/helmuthess">Light Painting</a></small> 
 
                 </section>
 
