Adding in the slides for the conferences that you can also learn more from.

--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -225,17 +225,23 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                 </section>
 
                 <section data-background-transition="none" data-background="http://farm4.static.flickr.com/3830/13575675933_5f2206cbd8_z.jpg" style="background: rgba(29,31,33,0.9)">
-
                     <h2>Database Architecture</h2> 
-
                     <p class="fragment">Query processor</p>
                     <p class="fragment">Storage manager</p>
                     <p class="fragment">Two-tier and three-tier architecture</p>
                     <p class="fragment">Advantages and disadvantages?</p>
                     <p class="fragment">"Keep the computation close to the data"</p>
-
                     <br /><small><a href="http://creativecommons.org/licenses/by/2.0/">creative commons licensed ( BY )</a> <a title="Nova Eventis" href="http://flickr.com/photos/helmuthess/13575675933">flickr photo</a> shared by <a href="http://flickr.com/people/helmuthess">Light Painting</a></small> 
+                </section>
 
+                <section data-background-transition="none" data-background="http://farm4.static.flickr.com/3830/13575675933_5f2206cbd8_z.jpg" style="background: rgba(29,31,33,0.9)">
+                    <h2>Learning More</h2> 
+                    <p class="fragment">SIGMOD</p>
+                    <p class="fragment">PODS</p>
+                    <p class="fragment">TODS</p>
+                    <p class="fragment">VLDB</p>
+                    <p class="fragment">CIDR</p>
+                    <br /><small><a href="http://creativecommons.org/licenses/by/2.0/">creative commons licensed ( BY )</a> <a title="Nova Eventis" href="http://flickr.com/photos/helmuthess/13575675933">flickr photo</a> shared by <a href="http://flickr.com/people/helmuthess">Light Painting</a></small> 
                 </section>
 
             </div>
