Added in a few final points to the chapter1 slides.

--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -194,7 +194,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment"><b class="sky">DDL</b>: Data definition language</p>
                     <p class="fragment"><b class="plum">DML</b>: Data manipulation language</p>
                     <p class="fragment"><b class="green">SQL</b> = <b class="sky">DDL</b> + <b class="plum">DML</b></p> 
-
+                    <p class="fragment"><em>Imperative</em> versus <em>declarative</em> languages</p>
                 </section>
 
                 <section>
@@ -213,8 +213,9 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <h1 id="entity-relationship_models">Entity-Relationship Models</h1>
 
                     <p class="fragment">Normalization</p>
-                    <p class="fragment">Null values</p>
+                    <p class="fragment">Meaning of and view on null values</p>
                     <p class="fragment">Object-relational mapping</p>
+                    <p class="fragment">Java query languages (JoSQL and JQL)</p>
 
                 </section>
 
