--- a/slides/cs380-chapter1.html
+++ b/slides/cs380-chapter1.html
@@ -222,7 +222,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
 <!-- <a title="Nova Eventis" href="http://flickr.com/photos/helmuthess/13575675933"><img class="img-responsive-tight" src="http://farm4.static.flickr.com/3830/13575675933_5f2206cbd8_z.jpg" /></a><br /><small><a href="http://creativecommons.org/licenses/by/2.0/">creative commons licensed ( BY )</a> <a title="Nova Eventis" href="http://flickr.com/photos/helmuthess/13575675933">flickr photo</a> shared by <a href="http://flickr.com/people/helmuthess">*Light Painting*</a></small> -->
 
-                <section data-background-transition="none" data-background="" style="http://farm4.static.flickr.com/3830/13575675933_5f2206cbd8_z.jpg">
+                <section data-background-transition="none" data-background="http://farm4.static.flickr.com/3830/13575675933_5f2206cbd8_z.jpg" style="">
                 </section>
 
                 <section data-background-transition="none" data-background="http://farm4.static.flickr.com/3830/13575675933_5f2206cbd8_z.jpg" style="background: rgba(29,31,33,0.9)">
