--- a/slides/cs380-chapter2.html
+++ b/slides/cs380-chapter2.html
@@ -56,6 +56,45 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                 <br/><small><a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">creative commons licensed ( BY-NC-SA )</a> <a title="vases" href="http://flickr.com/photos/mybloodyself/2428544365">flickr photo</a> shared by <a href="http://flickr.com/people/mybloodyself">danmachold</a></small>
             </section>
 
+            <section>
+                <h1 id="relational_databases">Relational Databases</h1>
+                <p class="fragment">Collection of tables, each with a unique name</p>
+                <p class="fragment">Review the examples in Figures 2.1 through 2.4</p>
+                <p class="fragment">What observations can you make about these tables?</p>
+                <p class="fragment"><b class="plum">Why do scientists uses relational databases?</b></p>
+            </section>
+
+            <section data-background-transition="none" data-background="https://farm4.staticflickr.com/3115/2901295347_47caf4600f_b.jpg" style="">
+            </section>
+
+            <section data-background-transition="none" data-background="https://farm4.staticflickr.com/3115/2901295347_47caf4600f_b.jpg" style="background: rgba(29,31,33,0.9)">
+                <h1>Standardized Terms</h1>
+                <p class="fragment">These words have the same meaning!</p>
+                <p class="fragment">Relation and table</p>
+                <p class="fragment">Tuple and row</p>
+                <p class="fragment">Attribute and column</p>
+                <br/> <small><a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">creative commons licensed (
+                        BY-NC-SA )</a> <a title="" href="http://flickr.com/photos/42498009@N00/2901295347">flickr
+                        photo</a> shared by <a href="http://flickr.com/people/42498009@N00">M.Y</a></small>
+            </section>
+
+            <section>
+                <h1 id="finding_data">Finding Data</h1>
+            </section>
+
+            <section data-background-transition="none" data-background="http://farm8.static.flickr.com/7061/14028600474_83724ec162.jpg" style="">
+            </section>
+
+            <section data-background-transition="none" data-background="http://farm8.static.flickr.com/7061/14028600474_83724ec162.jpg" style="background: rgba(29,31,33,0.9)">
+                <h1>Standardized Terms</h1>
+                <p class="fragment">These words have the same meaning!</p>
+                <p class="fragment">Relation and table</p>
+                <p class="fragment">Tuple and row</p>
+                <p class="fragment">Attribute and column</p>
+                <br /><small><a href="http://creativecommons.org/licenses/by-sa/2.0/">creative commons licensed ( BY-SA )</a> <a title="Keys" href="http://flickr.com/photos/120600995@N07/14028600474">flickr photo</a> shared by <a href="http://flickr.com/people/120600995@N07">jacqui.brown33</a></small>
+            </section>
+
+
 
         </div>
 
