Finishing the chapter2 slides about keys.

--- a/slides/cs380-chapter2.html
+++ b/slides/cs380-chapter2.html
@@ -79,18 +79,22 @@ if( window.location.search.match( /print-pdf/gi ) ) {
             </section>
 
             <section>
-                <h1 id="finding_data">Finding Data</h1>
+                <h1 id="finding_data">Accessing Data</h1>
+                <p class="fragment">How can we distinguish one tuple from another?</p>
+                <p class="fragment">Can the <b class="plum">values</b> of an attribute uniquely identify a tuple?</p>
+                <p class="fragment">We will identify <b class="green">keys</b> for our database tables!</p>
             </section>
 
             <section data-background-transition="none" data-background="http://farm8.static.flickr.com/7061/14028600474_83724ec162.jpg" style="">
             </section>
 
             <section data-background-transition="none" data-background="http://farm8.static.flickr.com/7061/14028600474_83724ec162.jpg" style="background: rgba(29,31,33,0.9)">
-                <h1>Standardized Terms</h1>
-                <p class="fragment">These words have the same meaning!</p>
-                <p class="fragment">Relation and table</p>
-                <p class="fragment">Tuple and row</p>
-                <p class="fragment">Attribute and column</p>
+                <h1>Database Keys</h1>
+                <p class="fragment">What is a <b class="sky">superkey</b>?</p>
+                <p class="fragment">Is this an example of a superkey?</p>
+                <p class="fragment"><b class="green">Wait</b>! A superkey may have extraneous attributes!</p>
+                <p class="fragment">Why is this an important issue to consider?</p>
+                <p class="fragment">We need to identify a <b class="scarlet">minimal</b> superkey!</p>
                 <br /><small><a href="http://creativecommons.org/licenses/by-sa/2.0/">creative commons licensed ( BY-SA )</a> <a title="Keys" href="http://flickr.com/photos/120600995@N07/14028600474">flickr photo</a> shared by <a href="http://flickr.com/people/120600995@N07">jacqui.brown33</a></small>
             </section>
 
