Adding some more color to the chapter2 slides.

--- a/slides/cs380-chapter2.html
+++ b/slides/cs380-chapter2.html
@@ -69,7 +69,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
             <section data-background-transition="none" data-background="https://farm4.staticflickr.com/3115/2901295347_47caf4600f_b.jpg" style="background: rgba(29,31,33,0.9)">
                 <h1>Standardized Terms</h1>
-                <p class="fragment">These words have the same meaning!</p>
+                <p class="fragment">These words have the <b class="orange">same</b> meaning!</p>
                 <p class="fragment">Relation and table</p>
                 <p class="fragment">Tuple and row</p>
                 <p class="fragment">Attribute and column</p>
