Adding extra content about the primary keys for the slides.

--- a/slides/cs380-chapter2.html
+++ b/slides/cs380-chapter2.html
@@ -98,6 +98,16 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                 <br /><small><a href="http://creativecommons.org/licenses/by-sa/2.0/">creative commons licensed ( BY-SA )</a> <a title="Keys" href="http://flickr.com/photos/120600995@N07/14028600474">flickr photo</a> shared by <a href="http://flickr.com/people/120600995@N07">jacqui.brown33</a></small>
             </section>
 
+            <section data-background-transition="none" data-background="http://farm8.static.flickr.com/7061/14028600474_83724ec162.jpg" style="background: rgba(29,31,33,0.9)">
+                <h1>Database Keys</h1>
+                <p class="fragment">What is a <b class="scarlet">candidate</b> key?</p>
+                <p class="fragment">But, many candidate keys are possible!</p>
+                <p class="fragment">So, we have to pick one of them.</p>
+                <p class="fragment">What is a <b class="plum">primary</b> key?</p>
+                <p class="fragment">Often, primary keys are never, or rarely modified. Why?</p>
+                <p class="fragment">Good and bad examples of primary keys.</p>
+                <br /><small><a href="http://creativecommons.org/licenses/by-sa/2.0/">creative commons licensed ( BY-SA )</a> <a title="Keys" href="http://flickr.com/photos/120600995@N07/14028600474">flickr photo</a> shared by <a href="http://flickr.com/people/120600995@N07">jacqui.brown33</a></small>
+            </section>
 
 
         </div>
