Finished a full draft of all of the content in the chapter2 handson example.

--- a/slides/cs380-chapter2.html
+++ b/slides/cs380-chapter2.html
@@ -155,11 +155,23 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                 </section>
 
                 <section>
-                    <h1 id="try_to_find">Try to Find</h1>
-                    <p class="fragment">Data that violates the primary key constraint</p>
-                    <p class="fragment">Data that adheres to the primary key constraint</p>
+                    <h1 id="try_to_find">Further Explorations</h1>
+                    <p class="fragment">Data that <b class="green">violates</b> the primary key constraint</p>
+                    <p class="fragment">Data that <b class="plum">adheres</b> to the primary key constraint</p>
                     <p class="fragment">Try multiple <code>INSERT</code> statements!</p>
+                    <p class="fragment">What have you learned about relational databases?</p>
+                    <p class="fragment">Do you have any questions about using <code>sqlite3</code>?</p>
                 </section>
+
+            <section data-background-transition="none" data-background="http://farm8.static.flickr.com/7061/14028600474_83724ec162.jpg" style="background: rgba(29,31,33,0.9)">
+                <h1>Database Keys</h1>
+                <p class="fragment">What is a <b class="scarlet">foreign</b> key?</p>
+                <p class="fragment">Creating a referencing relationship in the tables</p>
+                <p class="fragment">Using both primary keys and foreign keys</p>
+                <p class="fragment">Why is it useful to define the schema this way?</p>
+                <p class="fragment">Any questions about key definition in relational schemas?</p>
+                <br /><small><a href="http://creativecommons.org/licenses/by-sa/2.0/">creative commons licensed ( BY-SA )</a> <a title="Keys" href="http://flickr.com/photos/120600995@N07/14028600474">flickr photo</a> shared by <a href="http://flickr.com/people/120600995@N07">jacqui.brown33</a></small>
+            </section>
 
         </div>
 
